--- a/pages/home.html
+++ b/pages/home.html
@@ -95,10 +95,16 @@
             </h1>
             <p>We help children grow up stronger.</p>
           </div>
-          <button class="btn btn-success btn-lg" type="button">
-            Consultation
-          </button>
-          <button class="btn btn-success btn-lg" type="button">Explore</button>
+          <a href="services.html">
+            <button class="btn btn-success btn-lg" type="button">
+              Consultation
+            </button>
+          </a>
+          <a href="home.html#programsForKids">
+            <button class="btn btn-success btn-lg" type="button">
+              Explore
+            </button>
+          </a>
         </div>
       </div>
     </div>
@@ -531,11 +537,11 @@
       </div>
     </div>
     <!-- footer -->
-     <div style="background-color: #008000" class="pt-5">
+    <div style="background-color: #008000" class="pt-5">
       <div class="container">
         <footer>
           <div class="footer-about-clinic">
-            <h5 style="color:#fff ;">About Clinic</h5>
+            <h5 style="color: #fff">About Clinic</h5>
             <ul class="footer-list">
               <li><a href="aboutUs.html">About us</a></li>
               <li><a href="#">link</a></li>
@@ -546,7 +552,7 @@
             </ul>
           </div>
           <div class="footer-rehab">
-            <h5 style="color:#fff ;">Services</h5>
+            <h5 style="color: #fff">Services</h5>
             <ul class="footer-list">
               <li><a href="services.html">Services</a></li>
               <li><a href="#">link</a></li>
@@ -557,7 +563,7 @@
             </ul>
           </div>
           <div class="footer-to-patients">
-            <h5 style="color:#fff ;">To patients</h5>
+            <h5 style="color: #fff">To patients</h5>
             <ul class="footer-list">
               <li><a href="blog.html">News</a></li>
               <li><a href="#">link</a></li>
@@ -576,7 +582,7 @@
               </h5>
             </div>
             <div class="footer-phone">
-              <h5 style="color:#fff ;">Contacts</h5>
+              <h5 style="color: #fff">Contacts</h5>
               <p>
                 <a href="#">+7 705 296 XX XX</a>
                 <br />
@@ -584,7 +590,7 @@
               </p>
             </div>
             <div class="footer-email">
-              <h5 style="color:#fff ;">Email</h5>
+              <h5 style="color: #fff">Email</h5>
               <p><a href="#">info@med.kz</a></p>
             </div>
             <div class="footer-social">
@@ -608,5 +614,6 @@
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bs5-lightbox@1.8.3/dist/index.bundle.min.js"></script>
+    <script src="../scripts/homeScript.js"></script>
   </body>
 </html>
