--- a/pages/contactUs.html
+++ b/pages/contactUs.html
@@ -20,17 +20,6 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-      crossorigin="anonymous"
-    ></script>
   </head>
   <body>
     <!-- navbar with link to: -->
@@ -160,62 +149,86 @@
       </div>
     </div>
     <!-- form -->
-    <section class="container py-5">
+    <section class="container py-5 formContainer">
       <div class="row justify-content-center">
         <div class="w-100">
           <h2 class="text-center mb-4">Contact Us</h2>
 
-          <form action="">
-            <div class="mb-3">
+          <form action="" id="registrationForm" novalidate>
+            <div class="mb-3 form-group">
               <label for="name" class="form-label">Full Name</label>
               <input
                 type="text"
                 class="form-control"
                 id="name"
                 name="name"
-                required
                 placeholder="Enter your name"
               />
+              <div class="error" id="nameError"></div>
             </div>
-            <div class="mb-3">
+            <div class="mb-3 form-group">
               <label for="email" class="form-label">Email</label>
               <input
                 type="email"
                 class="form-control"
                 id="email"
                 name="email"
-                required
                 placeholder="Enter your email"
               />
+              <div class="error" id="emailError"></div>
             </div>
-            <div class="mb-3">
-              <label for="subject" class="form-label">Subject</label>
+            <div class="mb-3 form-group">
+              <label for="password" class="form-label">Password</label>
               <input
-                type="text"
+                type="password"
                 class="form-control"
-                id="subject"
-                name="subject"
-                required
-                placeholder="Enter subject"
+                id="password"
+                name="password"
+                placeholder="Enter your password"
               />
+              <div class="error" id="passwordError"></div>
             </div>
-            <div class="mb-4">
-              <label for="message" class="form-label">Message</label>
-              <textarea
+            <div class="mb-3 form-group">
+              <label for="phone" class="form-label">Phone Number</label>
+              <input
+                type="tel"
                 class="form-control"
-                id="message"
-                name="message"
-                rows="5"
-                required
-                placeholder="Enter your message"
-              ></textarea>
+                id="phone"
+                name="phone"
+                placeholder="8-xxx-xxx-xx-xx"
+              />
+              <div class="error" id="phoneError"></div>
+            </div>
+            <div class="mb-3 form-group">
+              <label for="birthday" class="form-label">Birthday</label>
+              <input
+                type="date"
+                class="form-control"
+                id="birthday"
+                name="birthday"
+              />
+              <div class="error" id="birthdayError"></div>
+            </div>
+            <div class="mb-3 form-group">
+              <label for="errorType" class="form-label"
+                >Select error type</label
+              >
+              <select id="errorType" class="form-control">
+                <option value="name">Invalid Name</option>
+                <option value="phone">Invalid Phone Number</option>
+                <option value="password">Invalid Password</option>
+                <option value="email">Invalid Email</option>
+                <option value="age">Invalid Age</option>
+                <option value="none">None</option>
+              </select>
             </div>
             <div class="d-grid">
               <button type="submit" class="btn btn-success btn-lg mb-5">
-                Send Message
+                Register
               </button>
             </div>
           </form>
+          <div class="success-message">Registration successful!</div>
         </div>
       </div>
     </section>
@@ -321,6 +334,17 @@
         Authors: Arsen, Angelina <br />Group: MCS-2301
       </div>
     </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script>
       var acc = document.getElementsByClassName("collapsible");
       var i;
